--- a/proyecto 2/proyecto 2/proyecto 2.csproj
+++ b/proyecto 2/proyecto 2/proyecto 2.csproj
@@ -46,16 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="..\..\Proyecto 2 V2\Proyecto 2 V2.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="..\..\Proyecto 2 V2\Proyecto 2 V2.Designer.cs">
+      <DependentUpon>Proyecto 2 V2.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="..\..\Proyecto 2 V2\Proyecto 2 V2.resx">
+      <DependentUpon>Proyecto 2 V2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
